--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,136 @@
---find-links https://download.pytorch.org/whl/torch_stable.html
---editable .
+absl-py==0.13.0
+anyio==3.2.1
+argon2-cffi==20.1.0
+asdl==0.1.5
+astor==0.7.1
+async-generator==1.10
+attrs==18.2.0
+Babel==2.7.0
+backcall==0.2.0
+bleach==3.3.0
+boto3==1.17.97
+botocore==1.20.97
+bpemb==0.2.12
+cachetools==4.2.2
+certifi==2021.5.30
+cffi==1.14.6
+chardet==4.0.0
+charset-normalizer==2.0.3
+click==8.0.1
+corenlp-protobuf==3.8.0
+cycler==0.10.0
+Cython==0.29.23
+debugpy==1.3.0
+decorator==4.4.2
+defusedxml==0.7.1
+docopt==0.6.2
+entmax==1.0
+entrypoints==0.3
+et-xmlfile==1.1.0
+filelock==3.0.12
+gensim==4.0.1
+google-auth==1.31.0
+google-auth-oauthlib==0.4.4
+greenlet==1.1.0
+grpcio==1.38.0
+huggingface-hub==0.0.8
+idna==2.10
+importlib-metadata==3.10.1
+ipykernel==6.0.1
+ipython==7.25.0
+ipython-genutils==0.2.0
+jdcal==1.4.1
+jedi==0.18.0
+Jinja2==3.0.1
+jmespath==0.10.0
+joblib==1.0.1
+json5==0.9.6
+jsonnet==0.14.0
+jsonschema==3.2.0
+jupyter-client==6.1.12
+jupyter-core==4.7.1
+jupyter-server==1.9.0
+jupyterlab==3.0.16
+jupyterlab-pygments==0.1.2
+jupyterlab-server==2.6.1
+kiwisolver==1.3.1
+Markdown==3.3.4
+MarkupSafe==2.0.1
+matplotlib==3.4.2
+matplotlib-inline==0.1.2
+mistune==0.8.4
+more-itertools==8.8.0
+nbclassic==0.3.1
+nbclient==0.5.3
+nbconvert==6.1.0
+nbformat==5.1.3
+nest-asyncio==1.5.1
+networkx==2.5.1
+nltk==3.6.2
+notebook==6.4.0
+numpy==1.20.3
+oauthlib==3.1.1
+openpyxl==2.4.11
+packaging==20.9
+pandas==1.1.5
+pandocfilters==1.4.3
+parso==0.8.2
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==8.2.0
+pluggy==0.13.1
+prometheus-client==0.11.0
+prompt-toolkit==3.0.19
+protobuf==3.17.3
+ptyprocess==0.7.0
+py==1.10.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.20
+Pygments==2.9.0
+pyparsing==2.4.7
+pyrsistent==0.14.11
+pytest==5.3.5
+python-dateutil==2.8.1
+pytz==2021.1
+PyYAML==5.4.1
+pyzmq==22.1.0
+records==0.5.3
+regex==2021.4.4
+requests==2.25.1
+requests-oauthlib==1.3.0
+requests-unixsocket==0.2.0
+rsa==4.7.2
+s3transfer==0.4.2
+sacremoses==0.0.45
+scipy==1.6.3
+Send2Trash==1.7.1
+sentencepiece==0.1.96
+six==1.16.0
+smart-open==5.1.0
+sniffio==1.2.0
+SQLAlchemy==1.4.18
+stanford-corenlp==3.9.2
+tablib==3.0.0
+tabulate==0.8.9
+tensorboard==2.5.0
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.0
+terminado==0.10.1
+testpath==0.5.0
+tokenizers==0.10.3
+torch==1.9.0
+torch-tb-profiler==0.2.0
+torchtext==0.3.1
+torchvision==0.10.0
+tornado==6.1
+tqdm==4.36.1
+traitlets==5.0.5
+transformers==4.7.0
+typing-extensions==3.10.0.0
+urllib3==1.26.5
+wcwidth==0.2.5
+webencodings==0.5.1
+websocket-client==1.1.0
+Werkzeug==2.0.1
+zipp==3.4.1
